# llm-infra

./: .dockerignore  .gitignore  pyproject.toml  requirements.txt  test_steps.md
.github/: copilot-instructions.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
langfuse/: .env.example  docker-compose.yml
litellm/: .env.example  IMPLEMENTATION.md  __init__.py  docker-compose.yaml
litellm/config/: .env.example  __init__.py  api_key_validator.py  api_keys.json  correlation_id.py  custom_auth.py  error_handler.py  json_logger.py  langfuse_schema.py  latency_tracker.py  litellm_config.yaml  litellm_langfuse_callback.py  metadata_extractor.py  token_extractor.py  trace_buffer.py  trace_buffer_flusher.py  trace_client.py
litellm/tests/: __init__.py  conftest.py
litellm/tests/contract/: test_api_key_validation.py  test_trace_schema.py
litellm/tests/integration/: test_e2e_request_tracing.py  test_gateway_only_access.py  test_langfuse_resilience.py  test_metadata_propagation.py  test_trace_fidelity.py
litellm/tests/unit/: test_callback_extraction.py  test_correlation_id.py  test_metadata_extraction.py  test_trace_submission.py
specs/001-automatic-request-tracing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-automatic-request-tracing/checklists/: requirements.md
specs/001-automatic-request-tracing/contracts/: README.md
