[project]
name = "llm-infra"
version = "0.1.0"
description = "LiteLLM → Langfuse request tracing integration feature"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=1.9.0,<2.0.0",
    "httpx>=0.23.0",
    "litellm>=0.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.990",
    "isort>=5.10.0",
]
